fix/improve tab-completion for `/mapify`